Cleanup with new Java language features